# cifkit

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  AUTHORS.rst  CHANGELOG.rst  CHANGELOG.txt  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CUMNON01.cif  CUMNON01_Sb.cif  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  changelog.txt  environment.yml  genindex.html  getting-started.html  index.html  license.html  mkdocs.yml  objects.inv  package-lock.json  paper-review-1.md  paper-review-2.md  paper-review-3.md  paper.bib  paper.md  py-modindex.html  pyproject.toml  pytest.ini  release.html  search.html  searchindex.js  test-cifkit.ipynb
.codespell/: ignore_words.txt
.github/: news-chanegelog.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  release_checklist.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-wheel-publish.yml  build-wheel-release-publish.yml  build-wheel-release-upload-t.yml  build-wheel-release-upload.yml  build-wheels-publish.yml  check-news-item.yml  extract-latest-changelog.py  get-latest-changelog.py  matrix-and-codecov-on-merge-to-main.yml  news-changelog.py  publish-docs-on-release.yml  test-update-repo.yml  tests-on-pr.yml  update-changelog.py  wheels.yml
_modules/: index.html
_modules/cifkit/coordination/: bond_distance.html  composition.html  connection.html  filter.html  geometry.html  method.html  site.html  site_distance.html
_modules/cifkit/data/: example.html  mendeleev.html  mendeleeve_handler.html  radius.html  radius_handler.html  radius_optimization.html
_modules/cifkit/figures/: histogram.html  polyhedron.html
_modules/cifkit/models/: cif.html  cif_ensemble.html
_modules/cifkit/occupancy/: mixing.html
_modules/cifkit/preprocessors/: environment.html  environment_util.html  error.html  format.html  supercell.html  supercell_util.html
_modules/cifkit/utils/: bond_pair.html  cif_editor.html  cif_parser.html  cif_sourcer.html  distance.html  error_messages.html  folder.html  formula.html  log_messages.html  prompt.html  random.html  sort.html  string_parser.html  unit.html
_sources/: index.rst.txt
_sources/api/: cifkit.coordination.rst.txt  cifkit.coordination.site_distance.rst.txt  cifkit.data.example.rst.txt  cifkit.data.mendeleeve_handler.rst.txt  cifkit.data.rst.txt  cifkit.figures.polyhedron.rst.txt  cifkit.occupancy.mixing.rst.txt  cifkit.preprocessors.environment_util.rst.txt  cifkit.utils.cif_editor.rst.txt  cifkit.utils.error_messages.rst.txt  cifkit.utils.formula.rst.txt  cifkit.utils.random.rst.txt  cifkit.utils.sort.rst.txt  cifkit.utils.string_parser.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: cifkit.coordination.bond_distance.html  cifkit.coordination.composition.html  cifkit.coordination.connection.html  cifkit.coordination.filter.html  cifkit.coordination.geometry.html  cifkit.coordination.html  cifkit.coordination.method.html  cifkit.coordination.site.html  cifkit.coordination.site_distance.html  cifkit.data.cifs.html  cifkit.data.demo.html  cifkit.data.example.html  cifkit.data.html  cifkit.data.mendeleev.html  cifkit.data.mendeleeve_handler.html  cifkit.data.radius.html  cifkit.data.radius_handler.html  cifkit.data.radius_optimization.html  cifkit.figures.histogram.html  cifkit.figures.html  cifkit.figures.polyhedron.html  cifkit.html  cifkit.models.cif.html  cifkit.models.cif_ensemble.html  cifkit.models.html  cifkit.occupancy.html  cifkit.occupancy.mixing.html  cifkit.preprocessors.environment.html  cifkit.preprocessors.environment_util.html  cifkit.preprocessors.error.html  cifkit.preprocessors.format.html  cifkit.preprocessors.html  cifkit.preprocessors.supercell.html  cifkit.preprocessors.supercell_util.html  cifkit.utils.bond_pair.html  cifkit.utils.cif_editor.html  cifkit.utils.cif_parser.html  cifkit.utils.cif_sourcer.html  cifkit.utils.distance.html  cifkit.utils.error_messages.html  (+12 more)
doc/source/: conf.py  index.rst
doc/source/api/: cifkit.coordination.bond_distance.rst  cifkit.coordination.geometry.rst  cifkit.data.mendeleev.rst  cifkit.data.rst  cifkit.models.rst  cifkit.preprocessors.environment.rst  cifkit.preprocessors.format.rst  cifkit.rst  cifkit.utils.distance.rst  cifkit.utils.prompt.rst
doc/source/notebooks/: 01_cif.ipynb  02_cif_ensemble.ipynb
docs/: Makefile  api.md  index.md
docs/notebooks/: 00_Intro.ipynb  01_cif.ipynb  02_cif_ensemble.ipynb
docs/source/: conf.py  index.rst  license.rst
docs/source/api/: cifkit.coordination.composition.rst  cifkit.coordination.connection.rst  cifkit.coordination.filter.rst  cifkit.coordination.method.rst  cifkit.coordination.site.rst  cifkit.data.cifs.rst  (+22 more)
news/: 1.1.0-release.rst  JOSS.rst  MP.rst  TEMPLATE copy 2.rst  TEMPLATE copy.rst  build-workflow.rst  ci-test  cif-radius.rst  cif-refined-size.rst  cifensemble-compute-cn.rst  cifensemble-test.rst  codespell.rst  danila-bug-hack.rst  delete-mypi.rst  dev.rst  doc-compute-cn.rst  doc-strings.rst  format-PCD.rst  lint.rst  main.rst  polyhedron-danila-fix.rst  pre-commit.rst  return-obj-valkue.rst  scikit-package-0.1.0.rst  test.rst  tests-requirement.rst  vec.rst  workflow.rst
notebooks/: 01_cif.html  01_cif.ipynb  02_cif_ensemble.html
notebooks/00_Intro/: index.html
notebooks/01_cif/: index.html
notebooks/02_cif_ensemble/: index.html
requirements/: conda.txt  docs.txt  pip.txt  test.txt
search/: search_index.json
snippets/: example-table.html
src/cifkit/: __init__.py  version.py
tests/: conftest.py  test__init__.py  test_distances.py  test_radius_optimization.py  test_supercell.py  test_supercell_utils.py  test_version.py
(+122 files in other folders)
