[build-system]
requires = ["setuptools>=62.0", "setuptools-git-versioning>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cifkit"
dynamic=['version', 'dependencies']
requires-python = ">=3.10, <3.13"
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Scientific/Engineering :: Physics',
        'Topic :: Scientific/Engineering :: Chemistry',
]
description = "Python library for high-throughput .cif analysis"
authors = [{name = "Sangjoon Lee", email = "bobleesj@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cif", "solid-state", "high-throughput", "crystallography"]

[project.urls]
Documentation = "https://bobleesj.github.io/cifkit"
Repository = "https://github.com/bobleesj/cifkit"
Issues = "https://github.com/bobleesj/cifkit/issues"
Changelog = "https://github.com/bobleesj/cifkit/blob/main/CHANGELOG"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/pip.txt"]}

[tool.codespell]
ignore-words-list = "indide,nd,te,caf,mater"
skip = "*.cif"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git\
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build/
  | buck-out
  | build
  | dist
  | blib2to3
  | tests/data/
  | hooks/post_gen_project.py$
  | .*\.py$
  | .*\.toml$
)/
'''
